# stream-cloud

./: .gitignore  CMakeLists.txt
config/device/: config.json
config/manager/: config.json
config/platform/: config.json
docker/: Dockerfile
examples/websocket/: CMakeLists.txt  client.html  main.cpp
modules/stream-api/: CMakeLists.txt
modules/stream-api/src/: error.cpp  error.hpp  http.cpp  http.hpp  json-rpc.cpp  json-rpc.hpp  task.hpp  transport_base.cpp  transport_base.hpp  websocket.cpp  websocket.hpp
modules/stream-api/src/json/: array.hpp  config.hpp  data.hpp  file.hpp  map.hpp  value.hpp
modules/stream-api/src/json/detail/: config.hpp  escape.hpp  normalize.hpp  parser.hpp  parser_util.hpp  tokenize.hpp  utf.hpp
modules/stream-broker/: CMakeLists.txt
modules/stream-broker/src/actor/: platform.hpp
modules/stream-broker/src/environment/: network_environment.hpp
modules/stream-broker/src/network/: multiplexer.hpp
modules/stream-client/: CMakeLists.txt
modules/stream-client/src/ws/: ws_client.cpp  ws_client.hpp  ws_session.cpp  ws_session.hpp
modules/stream-config/: CMakeLists.txt
modules/stream-config/src/: abstract_service.cpp  abstract_service.hpp  configuration.cpp  configuration.hpp  constructors.hpp  context.hpp  converters.hpp  data_provider.cpp  data_provider.hpp  dynamic.cpp  dynamic.hpp  dynamic_environment.cpp  dynamic_environment.hpp  forward.hpp  object.hpp
modules/stream-core/: CMakeLists.txt
modules/stream-core/src/: forwards.hpp  intrusive_ptr.hpp  metadata.hpp  queue.hpp  ref_counted.cpp  ref_counted.hpp
modules/stream-core/src/actor/: abstract_actor.cpp  abstract_actor.hpp  actor.cpp  actor.hpp  actor_address.cpp  actor_address.hpp  async_actor.cpp  async_actor.hpp  basic_actor.hpp  blocking_actor.cpp  blocking_actor.hpp  local_actor.cpp  local_actor.hpp
modules/stream-core/src/behavior/: abstract_action.cpp  abstract_action.hpp  context.cpp  context.hpp  reactions.cpp  reactions.hpp  type_action.cpp  type_action.hpp
modules/stream-core/src/channel/: abstract_channel.cpp  abstract_channel.hpp  channel.cpp  channel.hpp
modules/stream-core/src/environment/: abstract_environment.hpp  abstract_group.cpp  abstract_group.hpp  adjacency_list.hpp  cooperation.cpp  cooperation.hpp  environment.cpp  environment.hpp  group.cpp  group.hpp  storage_space.cpp  storage_space.hpp
modules/stream-core/src/executor/: abstract_coordinator.hpp  coordinator.hpp  executable.hpp  execution_device.hpp  worker.hpp
modules/stream-core/src/executor/policy/: work_sharing.hpp
modules/stream-core/src/messaging/: any.hpp  blocking_mail_queue.cpp  blocking_mail_queue.hpp  mail_box.hpp  message.cpp  message.hpp  message_header.cpp  message_header.hpp
modules/stream-core/src/standard_handlers/: add_channel.cpp  add_channel.hpp  skip.cpp  skip.hpp  sync_contacts.cpp  sync_contacts.hpp
modules/stream-crypt/: CMakeLists.txt
modules/stream-crypt/src/: base64.cpp  base64.hpp
modules/stream-device/: CMakeLists.txt
modules/stream-device/src/: control.cpp  control.hpp  device.cpp  manager.cpp  manager.hpp
modules/stream-devices/: README.md
modules/stream-io/: CMakeLists.txt
modules/stream-io/src/network/: connection_identifying.hpp
modules/stream-manager/: CMakeLists.txt
modules/stream-manager-info/: CMakeLists.txt
modules/stream-manager-info/src/: manager_info.cpp  manager_info.hpp
modules/stream-manager/src/: connections.cpp  connections.hpp  devices.cpp  devices.hpp  groups.cpp  groups.hpp  manager.cpp  platform.cpp  platform.hpp  router.cpp  router.hpp  subscriptions.cpp  subscriptions.hpp  users.cpp  users.hpp
modules/stream-platform/: CMakeLists.txt  README.md
modules/stream-platform/src/: managers.cpp  managers.hpp  platform.cpp  profile.cpp  profile.hpp  router.cpp  router.hpp
modules/stream-providers/: CMakeLists.txt
modules/stream-providers/src/http/: http_context.hpp  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  websocket_session.cpp  websocket_session.hpp
modules/stream-providers/src/ws/: ws_listener.cpp  ws_listener.hpp  ws_server.cpp  ws_server.hpp  ws_session.cpp  ws_session.hpp
modules/stream-router/: CMakeLists.txt
modules/stream-router/src/: router.cpp  router.hpp
modules/stream-settings/: CMakeLists.txt
modules/stream-settings/src/: settings.cpp  settings.hpp
modules/stream-storage/: CMakeLists.txt
modules/stream-storage/src/: sqlite3.h  sqlite_modern_cpp.h
modules/stream-storage/src/sqlite_modern_cpp/: errors.h  log.h  sqlcipher.h
modules/stream-storage/src/sqlite_modern_cpp/lists/: error_codes.h
modules/stream-storage/src/sqlite_modern_cpp/utility/: function_traits.h  uncaught_exceptions.h  utf16_utf8.h  variant.h
